增加适用于opp传输的d.ts，增加使用说明文档
Signed-off-by: zhangshouzhong2021 <zhangshouzhong@kaihong.com>

--- a/test/example/bluetoothtest/doc/使用说明文档.md
+++ b/test/example/bluetoothtest/doc/使用说明文档.md
@@ -223,18 +223,14 @@
 - 场景测试（ohos.bluetooth.d.ts）
 
   >1. 经典蓝牙发现场景测试
-  >
   >2. BLE蓝牙发现场景测试
-  >
   >3. GattClient场景测试
-  >
   >4. GattServer场景测试
-  >
   >5. SppClient场景测试
-  >
   >6. SppServer场景测试
-  >
-  >   蓝牙场景测试使用说明文档.md
+  >7. Opp发送端场景测试
+  >8. Opp接收端场景测试
+  >9. 蓝牙场景测试使用说明文档.md
 
 ![scenario测试界面](InstructionDoc\scenario测试页面.png)
 
