删除d.ts文件，将opp功能的使用说明增加至使用说明文档中
Signed-off-by: zhangshouzhong <zhangshouzhong@kaihong.com>

--- a/test/example/bluetoothtest/doc/使用说明文档.md
+++ b/test/example/bluetoothtest/doc/使用说明文档.md
@@ -14,7 +14,7 @@
 
 2. 下载方式
 
-![下载方式](InstructionDoc\下载方式.png)
+![下载方式](InstructionDoc/下载方式.png)
 
 - 使用git下载
 
@@ -22,11 +22,11 @@
 
   - 选择一个空文件夹，右键打开git Bash。（文件夹路径中不要出现中文）
 
-    ![gitBash](F:InstructionDoc\gitBash.png)
+    ![gitBash](InstructionDoc/gitBash.png)
 
   - 使用命令 `git clone {http}`
 
-    ![gitclone](F:InstructionDoc\gitclone.png)
+    ![gitclone](InstructionDoc/gitclone.png)
 
 - 直接下载zip
 
@@ -50,17 +50,17 @@
 
 2. 在DevEco Studio的欢迎页，选择**Open Project**开始创建一个新工程。
 
-![image-20221013162233350](InstructionDoc\Open_Project.png)
+![image-20221013162233350](InstructionDoc/Open_Project.png)
 
 2.选择程序所在的路径
 
-![文件路径](InstructionDoc\文件路径.png)
+![文件路径](InstructionDoc/文件路径.png)
 
 3. 打开程序的homepage
 
    \communication_bluetooth\test\example\BluetoothTest\entry\src\main\ets\MainAbility\pages\homePage.ets
 
-![homePage](InstructionDoc\homePage.png)
+![homePage](InstructionDoc/homePage.png)
 
 - **entry**为应用的主模块，类似与Android Studio的app模块，一个APP中，对于同一设备类型必须有且只有一个entry类型的HAP，可独立安装运行。
 
@@ -70,29 +70,29 @@
 
   - 方法一：
 
-  ![preview](InstructionDoc\previewer1.png)
+  ![preview](InstructionDoc/previewer1.png)
 
   - 方法二：
 
-  ![preview](InstructionDoc\previewer2.png)
+  ![preview](InstructionDoc/previewer2.png)
 
   - 成功预览后会生成.preview结构：
 
-  ![preview](InstructionDoc\preview.png)
+  ![preview](InstructionDoc/preview.png)
 
 - 使用**build**编译程序
 
   - 点击Build > Rebuild 进行编译; Build > Build Hap(s) /App(s) >Build Hap(s) 生成hap文件
   
-  ![build](InstructionDoc\build.png)
+  ![build](InstructionDoc/build.png)
 
   - hap文件的生成路径：entry\build\outputs\default
 
-    ![hap文件的路径](InstructionDoc\hap文件的路径.png)
+    ![hap文件的路径](InstructionDoc/hap文件的路径.png)
 
 - 打开homepage点击预览，会显示蓝牙专项测试程序的主界面，如下图所示
 
-![image-20221013163538827](InstructionDoc\previewer.png)
+![image-20221013163538827](InstructionDoc/previewer.png)
 
 注：在预览中，点击具体的功能模块，能实现页面跳转。具体的方法实现，需要在开发板上完成。
 
@@ -101,11 +101,11 @@
 - 点击File > Project Structure > Project > Signing Configs界面勾选“Automatically generate signature”，等待自动签名完成即可，点击“OK”。如下图所示：
 - 为了保证OpenHarmony应用的完整性和来源可靠，在应用构建时需要对应用进行签名。经过签名的应用才能在真机设备上安装、运行、和调试。如果没有配置签名，会报错：hvigor WARN: Will skip sign ‘hap’,Invalid signingConfig is configured for 'default' product.
 
-<img src="InstructionDoc\project structure.png" alt="project structure" style="zoom:75%;" />
+<img src="InstructionDoc/project structure.png" alt="project structure" style="zoom:75%;" />
 
 程序烧录
 
-![程序烧录](InstructionDoc\程序烧录.png)
+![程序烧录](InstructionDoc/程序烧录.png)
 
 ---
 
@@ -135,6 +135,38 @@
 
   在鸿蒙系统下编译，仍存在高版本对低版本的编译不兼容性问题。即在mater版本下编译的hap无法在beta2版本运行；反之则可以。
 
+**要使用Opp文件传输功能，需要添加暴漏接口到本地DevEco的ohos.bluetooth.d.ts,才可以使用opp的接口**
+
+- 修改ohos.bluetooth.d.ts中的 function  ` getProfile`
+
+  ~~~
+      /**
+       * Obtains the instance of profile.
+       *
+       * @param profileId The profile id..
+       * @return Returns instance of profile.
+       * @since 8
+       */
+      function getProfile(profileId: ProfileId): A2dpSourceProfile | A2dpSinkProfile | AvrcpProfile | HandsFreeAudioGatewayProfile | HandsFreeUnitProfile | HidHostProfile | PanProfile | PbapClientProfile |OppProfile | PbapServerProfile ;
+
+- 增加interface `OppProfile`
+
+  ~~~
+      /**
+       * Manager OppProfile profile.
+       */
+      interface OppProfile extends BaseProfile {
+          on(type: "transferStateChange", callback: Callback<BluetoothOppTransferInformation>): void;
+          off(type: "transferStateChange"): void;
+          on(type: "receiveIncomingFile", callback: Callback<BluetoothOppTransferInformation>): void;
+          off(type: "receiveIncomingFile"): void;
+          sendFile(device: string, filePaths: Array<string>, mimeTypes: Array<string>): boolean;
+          setIncomingFileConfirmation(accept: boolean): boolean;
+          getCurrentTransferInformation(): BluetoothOppTransferInformation;
+          cancelTransfer(): boolean;
+      }
+  ~~~
+
 ---
 
 ### 程序说明 
@@ -162,7 +194,7 @@
   >   SPP功能界面使用说明文档.md
   >
 
-![api测试界面](InstructionDoc\api测试页面.png)
+![api测试界面](InstructionDoc/api测试页面.png)
 
 
 
@@ -200,7 +232,7 @@
   >
   >   蓝牙自动测试使用说明文档.md
 
-![auto测试界面](InstructionDoc\auto测试页面.png)
+![auto测试界面](InstructionDoc/auto测试页面.png)
 
 
 
@@ -232,7 +264,7 @@
   >8. Opp接收端场景测试
   >9. 蓝牙场景测试使用说明文档.md
 
-![scenario测试界面](InstructionDoc\scenario测试页面.png)
+![scenario测试界面](InstructionDoc/scenario测试页面.png)
 
 
 
@@ -266,7 +298,7 @@
   >
   >  Profile功能界面使用说明文档.md
 
-![profile测试界面](InstructionDoc\profile测试页面.png)
+![profile测试界面](InstructionDoc/profile测试页面.png)
 
 
 
